--- a/test.html
+++ b/test.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<script type="text/javascript" src="tournData.js"></script>
+		<script type="text/javascript" src="pairingCode.js"></script>
+		<script type="text/javascript" src="interfaceJQueryCode.js"></script>
+	</head>
 
+</html>
